Fixed carousel buttons so they fit inside the page on smaller displays

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,7 +107,7 @@ body {
 @media not screen and (min-width: 1200px) {
     .carouselContainer {
         min-height: 100vh;
-        width: 100vw;
+        width: 100%;
         overflow: hidden;
         display: block;
     }
@@ -127,7 +127,7 @@ body {
     }
 
     .carouselButtons { 
-        max-width: 95vw;
+        max-width: 95%;
         margin: auto;
     }
 }
